--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,17 @@
 apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'maven'
+apply plugin: 'maven-publish'
+apply plugin: 'com.jfrog.bintray'
+
+buildscript {
+  repositories {
+    jcenter()
+  }
+  dependencies {
+    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.0'
+  }
+}
 
 description = "j8plus"
 
@@ -34,18 +45,18 @@ repositories {
   }
 }
 
-uploadArchives {
-  repositories {
-    mavenDeployer {
-      repository(url: 'https://api.bintray.com/maven/kevinlee/J8Plus') {
-        authentication(userName: hasProperty('bintrayUser') ? bintrayUser : "", password: hasProperty('bintrayPass') ? bintrayPass : "")
-      }
-      snapshotRepository(url: 'https://api.bintray.com/maven/kevinlee/J8Plus') {
-        authentication(userName: hasProperty('bintrayUser') ? bintrayUser : "", password: hasProperty('bintrayPass') ? bintrayPass : "")
-      }
-    }
-  }
-}
+//uploadArchives {
+//  repositories {
+//    mavenDeployer {
+//      repository(url: 'https://api.bintray.com/maven/kevinlee/J8Plus') {
+//        authentication(userName: hasProperty('bintrayUser') ? mavenDeployUser : "", password: hasProperty('bintrayPass') ? mavenDeployPassword : "")
+//      }
+//      snapshotRepository(url: 'https://api.bintray.com/maven/kevinlee/J8Plus') {
+//        authentication(userName: hasProperty('bintrayUser') ? mavenDeployUser : "", password: hasProperty('bintrayPass') ? mavenDeployPassword : "")
+//      }
+//    }
+//  }
+//}
 
 tasks.withType(JavaCompile) {
   options.encoding = projectSourceEncoding
@@ -77,5 +88,57 @@ jar {
   manifest {
     attributes 'Implementation-Title': 'J8+',
         'Implementation-Version': version
+  }
+}
+
+publishing {
+  publications {
+    mavenJava(MavenPublication) {
+      from components.java
+
+      artifact sourcesJar
+      artifact javadocJar
+    }
+  }
+}
+
+bintray {
+  user = hasProperty('bintrayUser') ? bintrayUser : ""
+  key = hasProperty('bintrayPass') ? bintrayPass : ""
+
+//        configurations = ['deployables'] //When uploading configuration files
+  publications = ['mavenJava']
+
+  dryRun = false //Whether to run this as dry-run, without deploying
+  publish = true //If version should be auto published after an upload
+  pkg {
+    repo = 'maven'
+    name = 'j8plus'
+    desc = 'Library containing useful tools for Java 8'
+    websiteUrl = 'https://github.com/Kevin-Lee/j8plus'
+    issueTrackerUrl = 'https://github.com/Kevin-Lee/j8plus/issues'
+    vcsUrl = 'https://github.com/Kevin-Lee/j8plus.git'
+    licenses = ['Apache-2.0']
+    labels = ['Java', 'Java8', 'Functional', 'Trampoline']
+    publicDownloadNumbers = true
+
+    //Optional version descriptor
+    version {
+      name = project.version //Bintray logical version name
+//      desc = 'optional, version-specific description'
+//                released  = 'optional, date of the version release' //2 possible values: date in the format of 'yyyy-MM-dd'T'HH:mm:ss.SSSZZ' OR a java.util.Date instance
+//                vcsTag = '1.3.0'
+//                attributes = ['gradle-plugin': 'com.use.less:com.use.less.gradle:gradle-useless-plugin'] //Optional version-level attributes
+//                gpg {
+//                    sign = true //Determines whether to GPG sign the files. The default is false
+//                    passphrase = 'passphrase' //Optional. The passphrase for GPG signing'
+//                }
+//      mavenCentralSync {
+//        sync = false //Optional (true by default). Determines whether to sync the version to Maven Central.
+//        user = 'userToken' //OSS user token
+//        password = 'paasword' //OSS user password
+//        close = '1' //Optional property. By default the staging repository is closed and artifacts are released to Maven Central. You can optionally turn this behaviour off (by puting 0 as value) and release the version manually.
+//      }
+    }
   }
 }
