--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,19 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'maven'
 apply plugin: 'maven-publish'
-apply plugin: 'com.jfrog.bintray'
+//apply plugin: 'com.jfrog.bintray'
 
-buildscript {
-  repositories {
-    jcenter()
-  }
-  dependencies {
-    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.0'
-  }
+//buildscript {
+//  repositories {
+//    jcenter()
+//  }
+//  dependencies {
+//    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.0'
+//  }
+//}
+
+plugins {
+  id "com.jfrog.bintray" version "1.1"
 }
 
 description = "j8plus"
