--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ apply plugin: 'com.jfrog.bintray'
 buildscript {
   repositories {
     jcenter()
+    mavenCentral()
   }
   dependencies {
     classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.0'
@@ -107,8 +108,8 @@ publishing {
 }
 
 bintray {
-  user = hasProperty('bintrayUser') ? bintrayUser : ""
-  key = hasProperty('bintrayPass') ? bintrayPass : ""
+  user = project.hasProperty('bintrayUser') ? bintrayUser : ""
+  key = project.hasProperty('bintrayPass') ? bintrayPass : ""
 
 //        configurations = ['deployables'] //When uploading configuration files
   publications = ['mavenJava']
