--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ buildscript {
 
 description = "j8plus"
 
-version = '0.0.9-SNAPSHOT'
+version = '0.0.9'
 
 //task wrapper(type: Wrapper) {
 //    gradleVersion = '2.3'
