--- a/build.gradle
+++ b/build.gradle
@@ -54,10 +54,10 @@ uploadArchives {
   repositories {
     mavenDeployer {
       repository(url: 'http://nexus.lckymn.com/content/repositories/kevin-public-releases') {
-        authentication(userName: hasProperty('bintrayUser') ? bintrayUser : "", password: hasProperty('bintrayPass') ? bintrayPass : "")
+        authentication(userName: hasProperty('mavenDeployUser') ? mavenDeployUser : "", password: hasProperty('mavenDeployPassword') ? mavenDeployPassword : "")
       }
       snapshotRepository(url: 'http://nexus.lckymn.com/content/repositories/kevin-public-snapshots') {
-        authentication(userName: hasProperty('bintrayUser') ? bintrayUser : "", password: hasProperty('bintrayPass') ? bintrayPass : "")
+        authentication(userName: hasProperty('mavenDeployUser') ? mavenDeployUser : "", password: hasProperty('mavenDeployPassword') ? mavenDeployPassword : "")
       }
     }
   }
