--- a/build.gradle
+++ b/build.gradle
@@ -10,10 +10,13 @@ buildscript {
   repositories {
     jcenter()
     mavenCentral()
+    maven {
+      url  "http://dl.bintray.com/kevinlee/maven"
+    }
   }
   dependencies {
     classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.0'
-    classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.3.1'
+    classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.3.2'
   }
 }
 
@@ -64,6 +67,9 @@ repositories {
   }
   maven {
     url 'http://nexus.lckymn.com/content/repositories/kevin-public-snapshots'
+  }
+  maven {
+    url  "http://dl.bintray.com/kevinlee/maven"
   }
 }
 
