--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
   <groupId>cc.kevinlee</groupId>
   <artifactId>j8plus</artifactId>
-  <version>0.0.9-SNAPSHOT</version>
+  <version>0.0.10</version>
   <packaging>jar</packaging>
 
   <name>J8Plus</name>
