--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
     <junit.version>4.11</junit.version>
-    <test0ster1.version>[0,)</test0ster1.version>
+    <test0ster1.version>0.0.6</test0ster1.version>
   </properties>
 
   <repositories>
