- Disabled: coveralls for Travis (now it's done by Semaphore) - Functions.useIfSatisfy is removed in favor of Java8's Optional

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,5 +9,5 @@ script:
   - mvn clean test package
   - gradle clean test jar
 
-after_success:
-  - gradle jacocoTestReport coveralls
+#after_success:
+#  - gradle jacocoTestReport coveralls
