#5 -  changed: .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ cache:
 jdk:
   - oraclejdk8
 script:
-  - mvn clean test package
+#  - mvn clean test package
   - gradle clean test jar
 
 #after_success:
