#5 -  changed: .travis.yml / build.gradle

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,5 +10,5 @@ script:
   - gradle --version
   - gradle clean test jar
 
-after_success:
-  - gradle jacocoTestReport coveralls
+#after_success:
+#  - gradle jacocoTestReport coveralls
