Upgrade: sbt and Scala * sbt 1.3.10 => 1.3.13 * Scala 2.13.3 * Updated: GitHub Actions config

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,7 +11,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
+    - uses: actions/setup-java@v1
+      with:
+        java-version: "8"
+
     - name: sbt GitHub Release
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_AUTH_TOKEN }}
