--- a/.github/workflows/publish-github-pages.yml
+++ b/.github/workflows/publish-github-pages.yml
@@ -1,12 +1,11 @@
-name: Publish GitHub Pages
+name: "[Doc][M] Publish"
 
 on:
-  push:
-    branches:
-      - publish-docs
+  workflow_dispatch:
 
 jobs:
-  build:
+  build_and_publish_doc_site:
+    if: github.ref != 'refs/heads/gh-pages' && github.ref != 'gh-pages'
 
     runs-on: ubuntu-latest
 
