--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,25 +11,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-java@v1
+    - uses: olafurpg/setup-scala@v13
       with:
-        java-version: "8"
+        java-version: "adopt@1.11"
 
-    - name: Cache Coursier
-      uses: actions/cache@v2.1.7
+    - name: Cache SBT
+      uses: actions/cache@v2
       with:
-        path: ~/.cache/coursier
-        key: ${{ runner.os }}-coursier-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('**/build.properties') }}
+        path: |
+          ~/.ivy2/cache
+          ~/.cache/coursier
+          ~/.sbt
+        key: ${{ runner.os }}-sbt-${{ matrix.scala.binary-version }}-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('**/build.properties') }}
         restore-keys: |
-          ${{ runner.os }}-coursier-
-
-    - name: Cache Ivy
-      uses: actions/cache@v2.1.7
-      with:
-        path: ~/.ivy2/cache
-        key: ${{ runner.os }}-ivy-${{ hashFiles('**/*.sbt') }}-${{ hashFiles('**/build.properties') }}
-        restore-keys: |
-          ${{ runner.os }}-ivy-
+          ${{ runner.os }}-sbt-${{ matrix.scala.binary-version }}-
 
     - name: Build Java Project
       env:
