--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,11 +13,11 @@ jobs:
     strategy:
       matrix:
         scala:
-          - { binary-version: "2.13", java-version: "8" }
+          - { binary-version: "2.13", java-version: "adopt@1.11" }
 
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-java@v1
+    - uses: olafurpg/setup-scala@v13
       with:
         java-version: ${{ matrix.scala.java-version }}
 
