Close #185 - Set up Codecov - GitHub Actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,3 +32,5 @@ jobs:
       run: |
         export CI_BRANCH="${GITHUB_REF#refs/heads/}"
         .github/workflows/sbt-build.sh 2.13.3
+
+    - uses: codecov/codecov-action@v2
